[package]
name = "p02_doom"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.9.1"
bevy_asset_loader = {version = "0.14.1", features = ["2d"] }
bevy-inspector-egui = "0.17.0"
bevy_sprite3d = "2.3.1"
